--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.3",
+    "ethers": "^5.4.1",
+    "less": "^4.1.1",
+    "less-loader": "^6.0.0",
+    "vue": "^2.6.11",
+    "web3": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
