--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
     "ethers": "^5.4.1",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
     "less": "^4.1.1",
     "less-loader": "^6.0.0",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.7",
     "web3": "^1.4.0"
   },
   "devDependencies": {
